# container-paradise

./: README.org  build.yml
clasp/: .dockerignore  .gitignore  .zprofile  .zprompt  .zshenv  .zshrc  CMakeLists.txt  Dockerfile.clasp  Makefile  project.clj
clasp/.emacs.d/: .customized.el  .gitignore  init.el  projectile-bookmarks.eld
clasp/.emacs.d/emms/: history
clasp/.emacs.d/etc/: dot-files.org  init.org
clasp/.emacs.d/snippets/: enh-ruby-mode  ensime-mode  term-modelein-new-reagent  typerex-mode
clasp/.emacs.d/snippets/LilyPond-mode/: blank-sheet-music  midi-example
clasp/.emacs.d/snippets/bibtex-mode/: online
clasp/.emacs.d/snippets/c-mode/: assert  compile  define  elisp-bind-name  elisp-function  elisp-module-header  elisp-module-init  elisp-module-template  elisp-provide  fopen  hello-world  malloc  node-type  packed  printf  stdio  stdlib  string  union  unistd  while
clasp/.emacs.d/snippets/cc-mode/: inc  inc.1
clasp/.emacs.d/snippets/cider-repl-mode/: -dependency-maven  add-dependency  bench  bp  def  defm  if  (+16 more)
clasp/.lein/: profiles.clj.example
clasp/.python.d/: init.py
clasp/etc/ansible/: clasp.yml  compile-targets.yml  emacs.yml  home-alpine.yml  home-centos-7.yml  home-debian-stretch.yml  home-kali.yml  home-ubuntu-16.yml  home-ubuntu-17.yml  hosts  lua.yml  node-global.yml  perl-locallib.yml  playbook.yml  requirements.yml  ruby-gems.yml  slow-lang.yml  virtualenvs.yml  zsh.yml
clasp/include/static/: tlpi_hdr.h
clasp/lib/: ll.cc
clasp/lib/golib/: CMakeLists.txt  README.org
clasp/src/: db.cc
clasp/src/clj/: log4j.properties
(+751 files in other folders)
